packages/rocket/rocket-0.5.0-rc.2/contrib/db_pools/codegen/tests/ui-fail-stable/database-syntax.stderr
error: invalid value: expected string literal
 --> $DIR/database-syntax.rs:4:12
  |
4 | #[database(123)]
  |            ^^^

error: [note] error occurred while deriving `Database`
 --> $DIR/database-syntax.rs:3:10
  |
3 | #[derive(Database)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected key/value `key = value`
 --> $DIR/database-syntax.rs:8:25
  |
8 | #[database("some-name", "another")]
  |                         ^^^^^^^^^

error: [note] error occurred while deriving `Database`
 --> $DIR/database-syntax.rs:7:10
  |
7 | #[derive(Database)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected attribute parameter: `name`
  --> $DIR/database-syntax.rs:12:25
   |
12 | #[database("some-name", name = "another")]
   |                         ^^^^

error: [note] error occurred while deriving `Database`
  --> $DIR/database-syntax.rs:11:10
   |
11 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enums are not supported
  --> $DIR/database-syntax.rs:16:1
   |
16 | #[database("foo")]
   | ^

error: [note] error occurred while deriving `Database`
  --> $DIR/database-syntax.rs:15:10
   |
15 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: missing `#[database("name")]` attribute
  --> $DIR/database-syntax.rs:20:1
   |
20 | struct E(deadpool_postgres::Pool);
   | ^^^^^^

error: [note] error occurred while deriving `Database`
  --> $DIR/database-syntax.rs:19:10
   |
19 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one unnamed field
  --> $DIR/database-syntax.rs:23:1
   |
23 | #[database("foo")]
   | ^

error: [note] error occurred while deriving `Database`
  --> $DIR/database-syntax.rs:22:10
   |
22 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one unnamed field
  --> $DIR/database-syntax.rs:27:1
   |
27 | #[database("foo")]
   | ^

error: [note] error occurred while deriving `Database`
  --> $DIR/database-syntax.rs:26:10
   |
26 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/database-syntax.rs:31:1
   |
31 | #[database("foo")]
   | ^

error: [note] error occurred while deriving `Database`
  --> $DIR/database-syntax.rs:30:10
   |
30 | #[derive(Database)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Database` (in Nightly builds, run with -Z macro-backtrace for more info)
